--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "password-validator": "^5.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-dom": "^6.26.1",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
