--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,12 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-formidable": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.4",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "password-validator": "^5.3.0",
+    "validator": "^13.12.0"
   }
 }
